# blog-v2

./: .giignore  .gitignore  pyproject.toml
blog_cbv/apps/accounts/: forms.py  models.py  views.py
blog_cbv/apps/blog/: admin.py  feeds.py  forms.py  models.py  urls.py  views.py
blog_cbv/blog_cbv/: settings.py  urls.py
blog_cbv/templates/: footer.html  header.html  main.html  sidebar.html
blog_cbv/templates/blog/: post_list.html
blog_cbv/templates/blog/comments/: comments_list.html
