[tool.poetry]
name = "blog-v2"
version = "0.1.0"
description = ""
authors = ["Django-B <django.ppp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
pillow = "^10.4.0"
django-mptt = "^0.16.0"
django-mptt-admin = "^2.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
